added images and fonts

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,18 @@ body {
 
     color: #666;
 }
+
+img {
+    max-width: 100%;
+}
 /* -------------------- HEADINGS AND TYPE */
+
+h1,
+h2,
+h3 {
+    font-family: 'Montserrat', sans-serif;
+}
+
 h1 {
     font-size: 40px;
 }
@@ -24,6 +35,12 @@ p {
     color: green;
 }
  /* -------------------- LAYOUTS */
+ .content{
+     background-color: aqua;
+     max-width: 1000px;
+     margin-left: auto;
+     margin-right: auto;
+ }
 /* -------------------- HEADER */
 /* -------------------- NAVIGATION */
 /* -------------------- FOOTER */
