--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,10 +40,18 @@ p {
      max-width: 1000px;
      margin-left: auto;
      margin-right: auto;
+     padding-left: 3%;
+     padding-right: 3%;
+
+     
+    
  }
 /* -------------------- HEADER */
 /* -------------------- NAVIGATION */
 /* -------------------- FOOTER */
+footer {
+    background-color: red
+}
 /* -------------------- MODULES */
 
 
