--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,11 @@
 /* -------------------- VARIABLES */
 /* -------------------- GLOBAL DEFAULTS */ 
 body {
-    background-color: pink;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f3dcd4;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 300;
 
-    color: #666;
+    color: #000000;
 }
 
 img {
@@ -14,8 +15,12 @@ img {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5 {
     font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 h1 {
@@ -28,22 +33,24 @@ h2 {
 
 h3 {
     font-size: 24px;
-    color: #222;
+    color: 000000;
 }
 
+
 p {
-    color: green;
+    color: 000000;
+    font-family: 'Roboto', sans-serif;
 }
  /* -------------------- LAYOUTS */
  .content{
-     background-color: aqua;
+     background-color: #e0d5c7;
      max-width: 1000px;
      margin-left: auto;
      margin-right: auto;
      padding-left: 3%;
      padding-right: 3%;
 
-     
+
     
  }
 /* -------------------- HEADER */
