--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@
 /* -------------------- GLOBAL DEFAULTS */ 
 body {
     background-color: #f3dcd4;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Gothic A1', sans-serif;
     font-weight: 300;
 
     color: #000000;
@@ -18,9 +18,10 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    text-transform: uppercase; 
+    
 }
 
 h1 {
@@ -39,8 +40,11 @@ h3 {
 
 p {
     color: 000000;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Gothic A1', sans-serif;
+    font-weight: 300;
 }
+
+
  /* -------------------- LAYOUTS */
  .content{
      background-color: #e0d5c7;
