--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -65,7 +65,7 @@ p {
 /* -------------------- NAVIGATION */
 /* -------------------- FOOTER */
 footer {
-    background-color: #f3dcd4 
+    background-color: #f1bdb7 
 }
 /* -------------------- MODULES */
 
@@ -81,7 +81,7 @@ footer {
 }
 
 .news-component h2 {
- color: #f1bdb7;   
+ color: #000000;   
 }
 
 
