added flex and grid examples

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,8 +101,20 @@ footer {
     float: right;
     margin-left: 20px;
     margin-right: 0;
-    
 }
 
+.news-component-image-only {
+    display: flex;
+    justify-content: center;
+}
 
+.news-component-image-only img{
+    margin-right: 0;
+    float: none;
+}
 
+.news-component-columns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
