--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,8 +140,12 @@ header .content {
 
 .navigation {
 
-background-color: var(--alternate-bg-color);
+position: sticky;
+top: 0;
 
+background-color: var(--alternate-bg-color);
+padding-bottom: 10px;
+padding-top: 10px;
 }
 
 .navigation .content {
@@ -149,6 +153,14 @@ background-color: var(--alternate-bg-color);
     margin-top: 0;
     padding: 0;
     list-style: none;
+
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.navigation a {
+    color: #000000;
 }
 
 /* -------------------- FOOTER */
