--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 /* -------------------- VARIABLES */
 
 :root {
-    --mina-bg-color: #f1bdb7;
+    --main-bg-color: #f1bdb7;
 
     --vertical-spacer: 20px;
 
@@ -17,13 +17,13 @@ html {
 
 }
 body {
-    background-color: var(--main-bg-color);
-    font-family: 'Gothic A1', sans-serif;
+    background-color: var(--alternate-bg-color);
+    font-family: 'Playfair Display', serif;
     font-weight: 300;
     color: #000000;
     font-size: 18px;
     line-height: 1.4;
-    
+
     box-sizing: border-box;
 }
 
@@ -73,12 +73,13 @@ p {
 
  /* -------------------- LAYOUTS */
  .content{
-     background-color: #f3edeb;
+     /*background-color: #f3edeb;*/
      max-width: 1000px;
      margin-left: auto;
      margin-right: auto;
      padding-left: var(--padder);
      padding-right: var(--padder);
+     
 
  }
 /* -------------------- HEADER */
@@ -106,6 +107,7 @@ header a {
 
 .header-sub-heading {
     font-size: 20px;
+    font-style: italic;
 }
 
 @media screen and (min-width: 800px) {
@@ -181,8 +183,12 @@ footer {
 
 /* -------------------- MODULES */
 
+main {
+    background-color: yellow;
+}
+
 .news-component {
-    border: 1px solid black
+    border: 1px solid black;
     
     border-width: 2px;
     border-style: solid;
@@ -230,6 +236,16 @@ footer {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
 }
+
+.news-component-columns a img {
+    filter: grayscale();
+}
+
+.news-component-columns a:hover img {
+    filter: unset;
+}
+
+
 
 @media screen and (min-width: 800px) {
 
